fixed overflow issue and changed some sizing

--- a/main.css
+++ b/main.css
@@ -81,6 +81,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        overflow-x:hidden;
     }
     
     main {
@@ -120,7 +121,6 @@
             width:100%;
             margin-right:1rem;
             margin-top:-1rem;
-            padding-bottom:1rem;
         }
         
         .navbar-links {
@@ -233,7 +233,8 @@
 
         h2{
             margin:0 auto;
-            margin-top:5rem;
+            margin-top:2rem;
+            margin-bottom:2rem;
         }
 
         .features-section{
@@ -242,6 +243,7 @@
             justify-content:space-between;
             align-items:center;
             margin: 0 auto;
+
         }
 
         .features{
